@@ -4,6 +4,9 @@ Changelog
 1.1 - unreleased
 ----------------
 
+- Sent authentication cookies only over secure connections. This refs
+  https://jira.jarn.com/browse/INTRANETT-135.
+  [hannosch]
 
 1.0 - 2010-12-04
 ----------------
